# ARC-miner

./: .gitignore  .gitmodules  Akoya.slnx  CHANGELOG.md  CONTRIBUTING.md  MINING-GUIDE.md  PEARL-CHALLENGE-SPEC.md  README.md  build-aot.ps1  build.ps1  build.sh
docs/: MOE-PORT-PLAN.md  PEARL-V1-CHALLENGE.md  POOL-FEE-TRANSPARENCY.md  POOLS.md  README.md
native/: Cargo.toml
native/pearl-blake3/src/: merkle.rs
native/pearl-gemm/: smoke_gb10.c
native/pearl-gemm/csrc/blackwell/: transcript_gemm_sm100.cu  transcript_gemm_sm100.h
native/pearl-gemm/csrc/capi/: CMakeLists.txt  Makefile  capi_prelude.h  generate_static_switches.py  pearl_gemm_capi.cpp  pearl_gemm_capi.h  pearl_gemm_capi_util.cu  portable_int8_helpers.cu  portable_int8_helpers.h
native/pearl-gemm/csrc/capi/stub_torch/c10/util/: Exception.h
native/pearl-gemm/csrc/capi/stub_torch/torch/: types.h
native/pearl-gemm/csrc/consumer/: transcript_gemm_kernel.cu
native/pearl-gemm/csrc/gemm/: kernel_traits.hpp  noise_generation.cu  pearl_gemm_decl.h  pearl_gemm_host.h  pearl_gemm_kernel.h  pearl_gemm_launch_template.h  static_switch.h  static_switch_matmul.h  static_switch_noisingA.h  static_switch_noisingB.h  tile_scheduler.hpp
native/pearl-gemm/csrc/gemm/instantiations/: gemm_R128_bf16_128x256x128_3stages_cluster1x1.cu  gemm_R64_bf16_128x256x128_3stages_cluster1x1.cu  noisingA_R128_fp16_64x64_2stages.cu  noisingA_R64_fp16_64x64_2stages.cu  noisingB_R128_fp16_64x64_2stages.cu  noisingB_R64_fp16_64x64_2stages.cu
native/pearl-gemm/csrc/portable/: portable_int8_gemm.cu  portable_int8_gemm_dp4a.cu  portable_int8_gemm_sm75.cu  run-parity.sh  transcript_canonical.cuh  transcript_gemm_dp4a.cu  transcript_gemm_kernel.cu  transcript_gemm_sm75.cu  transcript_kernel.cu  transcript_kernel.cuh
native/pearl-gemm/csrc/rocm/: blake3_device.cuh  blake3_hip.hip  blake3_rounds.inc  bseed_expand_hip.hip  lcg_int7_hip.hip  noise_gen_hip.hip  noisy_gemm_hip.hip  pearl_iter_hip.hip  pearl_kernels.cuh  tensor_hash_hip.hip  transcript_hip.hip
native/pearl-gemm/csrc/rocm/host/: Makefile  cuda_hip_shim.cpp  pearl_gemm_capi_rocm.cpp
native/pearl-gemm/csrc/sycl/: Makefile  blake3_device.hpp  blake3_device.hpp.bak-premerge-20260623-032043  build-dll.cmd  cuda_sycl_shim.cpp  fused_check.cpp  pearl_gemm_capi.dll.bak-20260606-164412  pearl_gemm_capi_sycl.cpp  pearl_gemm_capi_sycl.cpp.bak-premerge-20260623-032043  pearl_kernels.hpp  pearl_kernels.hpp.bak-premerge-20260623-032043
native/pearl-gemm/csrc/tensor_hash/: bseed_merkle_tree_roots_kernel_sm80.hpp  merkle_tree_roots_kernel.hpp  merkle_tree_roots_kernel_sm80.hpp  merkle_tree_utils.hpp  tensor_hash.cu  tensor_hash_decl.hpp  tensor_hash_host.hpp  tensor_hash_host_sm80.hpp
native/pearl-mining-capi/: Cargo.toml
native/pearl-mining-capi/src/: lib.rs
proto/v2/: miner.proto
scripts/: protoc-arm64-wrapper.sh
src/: Directory.Build.props
src/Akoya.Crypto/: Akoya.Crypto.csproj  AuditIndexDeriver.cs  AuditProofBuilder.cs  AuditProofVerifier.cs  BSeedExpander.cs  Blake3.cs  ChallengeSolver.cs  JackpotComputer.cs  LcgInt7.cs  MerkleProofBuilder.cs  MinerEnv.cs  MiningConfiguration.cs  NoiseGenerator.cs
src/Akoya.Cuda/: Akoya.Cuda.csproj  CudaDriver.cs
src/Akoya.Miner/: Akoya.Miner.csproj  Program.cs
src/Akoya.Miner/Config/: EnvVarBindings.cs  MinerOptions.cs
src/Akoya.Miner/Mining/: Autotune.cs  BSeedMerkleTreeHandle.cs  BSeedMerkleTreeHandleFactory.cs  GpuWorker.cs  ILivenessTarget.cs  JobBus.cs  NativeBSeedExpansion.cs  NativeBSeedMerkleTreeHandle.cs  NativeEnv.cs  ReconnectBackoff.cs  ResidentBStateBuffers.cs  ShareBuilder.cs  ShareFinalizer.cs  ShareTargetGuard.cs  SigmaContext.cs  WorkerBuffers.cs  WorkerLivenessWatchdog.cs  WorkerOrchestrator.cs
src/Akoya.Miner/Observability/: CustomConsoleFormatter.cs  Dashboard.cs  LogRateLimiter.cs  Metrics.cs  ShutdownDeadline.cs  VersionInfo.cs
src/Akoya.MinerCore/: Akoya.MinerCore.csproj  HostSignalHeaderLayout.cs  MetricsSampler.cs
src/Akoya.Mining/: Akoya.Mining.csproj  IMerkleTreeHandle.cs  MerkleProofFromLeafCvs.cs  MerkleRootAndProof.cs  MerkleTreeHandle.cs  PearlMiningNative.cs
src/Akoya.PearlGemm/: Akoya.PearlGemm.csproj  PearlGemmNative.cs
src/Akoya.Pool/: Akoya.Pool.csproj  AssemblyMarker.cs  HeartbeatPump.cs  IEventSink.cs  IPoolSession.cs  MiningSession.cs  PingPump.cs  PoolConnection.cs  PoolInfo.cs  PoolUnreachableException.cs  SequenceCounter.cs  SessionStore.cs  StratumConnection.cs  StratumJobParser.cs  StratumModels.cs  StratumSession.cs  StreamIdleException.cs
src/Akoya.Proto/: Akoya.Proto.csproj  ShareSubmissionExtension.cs
